package com.github.e1turin.lab5.containers

enum class ResponseType {
    NONE, TASK_COMPLETED, TASK_FAILED
}