package com.github.e1turin.containers

enum class RequestType {
    DO_TASK,
}