package com.github.e1turin.exceptions

class RecursiveScriptException() : Exception("Executed script contains recursion")
