package com.github.e1turin.exceptions

class CallstackOverflowException() : Exception("Too much executing script calls")

