package com.github.e1turin.exceptions

class NotRequestableCommandException : Exception("Attempt to exec not Requestable command")

